--- a/GruntfileSPA/main.html
+++ b/GruntfileSPA/main.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Main</title>
-    <link href="css/app.css" rel="stylesheet" />    
+    <link href="css/build/app.css" rel="stylesheet" />    
 </head>
 <body>
     <h1 class="home">Home</h1>
