Gulp file config complete

--- a/GulpfileSPA/main.html
+++ b/GulpfileSPA/main.html
@@ -7,7 +7,7 @@
 <body>
     <h1 class="home">Home</h1>
     <h1 class="contact">Contact</h1>    
-    <script data-main="scripts/build/main.js" src="scripts/vendors/require.min.js"></script>    
+    <script data-main="scripts/build/app.js" src="scripts/require.min.js"></script>    
 </body>
 </html>
 
