--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Gulp Project Template + Backbone + RequireJs</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="public/css/app.css">
 </head>
 
 <body>
